--- a/YellowstonePathology/UI/TypingShorcutDialog.xaml
+++ b/YellowstonePathology/UI/TypingShorcutDialog.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="YellowstonePathology.UI.TypingShorcutDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Typing Shortcuts" Height="466" Width="305" WindowStyle="ToolWindow">
+    Title="Typing Shortcuts" Height="466" Width="350" WindowStyle="ToolWindow">
     <Grid Margin="5,5,5,5" KeyUp="GridTyping_KeyUp">
         
         <Grid.ColumnDefinitions>
@@ -9,6 +9,7 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -33,15 +34,28 @@
         <ComboBox Name="comboBoxShortcutType" VerticalContentAlignment="Center"								 							 								 
 				Text="{Binding Path=Type}" Grid.Column="1" Grid.Row="2" 
                 Margin="2,2,2,2" HorizontalAlignment="Stretch">
-        <ComboBoxItem>Personal</ComboBoxItem>
-        <ComboBoxItem>Global</ComboBoxItem>
-      </ComboBox>
+            <ComboBoxItem>Personal</ComboBoxItem>
+            <ComboBoxItem>Global</ComboBoxItem>
+        </ComboBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="2,2,2,2" HorizontalAlignment="Left" FontWeight="Bold">Text:</TextBlock>
-        <TextBox Name="TextBoxText" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Text="{Binding Path=Text}" Margin="2,2,2,2" TextWrapping="Wrap" 
+        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" HorizontalAlignment="Right" FontWeight="Bold">Category:</TextBlock>
+        <ComboBox Name="comboBoxCategory" VerticalContentAlignment="Center"								 							 								 
+				Text="{Binding Path=Category}" Grid.Column="1" Grid.Row="3" 
+                Margin="2,2,2,2" HorizontalAlignment="Stretch" IsEditable="True">
+            <ComboBoxItem>Clerical</ComboBoxItem>
+            <ComboBoxItem>Derm</ComboBoxItem>
+            <ComboBoxItem>GI</ComboBoxItem>
+            <ComboBoxItem>Gross</ComboBoxItem>
+            <ComboBoxItem>GYN</ComboBoxItem>
+            <ComboBoxItem>Heme</ComboBoxItem>
+            <ComboBoxItem>Placenta</ComboBoxItem>
+        </ComboBox>
+
+        <TextBlock Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Margin="2,2,2,2" HorizontalAlignment="Left" FontWeight="Bold">Text:</TextBlock>
+        <TextBox Name="TextBoxText" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Text="{Binding Path=Text}" Margin="2,2,2,2" TextWrapping="Wrap" 
                  ScrollViewer.VerticalScrollBarVisibility="Auto" AcceptsReturn="True"></TextBox>
 
-        <StackPanel Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal">
+        <StackPanel Grid.Column="1" Grid.Row="6" Grid.ColumnSpan="2" HorizontalAlignment="Right" Orientation="Horizontal">
             <Button Width="75" Height="30" Margin="2,2,2,2" Click="ButtonOk_Click" HorizontalAlignment="Left">Ok</Button>
             <Button Width="75" Height="30" Margin="2,2,2,2" Click="ButtonCancel_Click" HorizontalAlignment="Right">Cancel</Button>
         </StackPanel>
