Add Refresh SS from MySql functionaliy

--- a/YellowstonePathology/UI/MainWindow.xaml
+++ b/YellowstonePathology/UI/MainWindow.xaml
@@ -87,6 +87,7 @@
 				<MenuItem Name="MenuItemRuleBrowser" Header="Rule Browser" Click="MenuItemRuleBrowser_Click"></MenuItem>                
                 <MenuItem Name="MenuItemValidationTesting" Header="Validation Testing" Click="MenuItemValidationTesting_Click"></MenuItem>
                 <MenuItem Name="MenuItemMySqlMigration" Header="MySql Migration" Click="MenuItemMySqlMigration_Click"></MenuItem>
+                <MenuItem Name="MenuItemRefreshFromMySql" Header="Refresh FromMySql" Click="MenuItemRefreshFromMySql_Click"></MenuItem>
                 <MenuItem Name="MenuItemTesting" Header="Testing" Click="MenuItemTesting_Click"></MenuItem>
             </MenuItem>
 
