--- a/YellowstonePathology/UI/EmbeddingDialog.xaml
+++ b/YellowstonePathology/UI/EmbeddingDialog.xaml
@@ -100,8 +100,8 @@
                             <GridViewColumn Header="Collected" Width="130" DisplayMemberBinding="{Binding Path=CollectionTime, Converter={StaticResource MilitaryDateTimeConverter}}" />
                             <GridViewColumn Header="Start" Width="150" DisplayMemberBinding="{Binding Path=FixationStartTime, Converter={StaticResource MilitaryDateTimeConverter}}" />
                             <GridViewColumn Header="End" Width="150" DisplayMemberBinding="{Binding Path=FixationEndTime}" />
-                            <GridViewColumn Header="Duration" Width="120" DisplayMemberBinding="{Binding Path=FixationDurationCalc}" />
-                            <GridViewColumn Header="Duration" Width="120" DisplayMemberBinding="{Binding Path=FixationDuration}" />
+                            <GridViewColumn Header="Expected" Width="120" DisplayMemberBinding="{Binding Path=FixationDurationExpected}" />
+                            <GridViewColumn Header="Actual" Width="120" DisplayMemberBinding="{Binding Path=FixationDuration}" />
                             <GridViewColumn Header="Description" Width="300" DisplayMemberBinding="{Binding Path=Description}" />
                         </GridView>
                     </ListView.View>
