cpt codes for skins

--- a/YellowstonePathology/UI/Surgical/SurgicalReview.xaml
+++ b/YellowstonePathology/UI/Surgical/SurgicalReview.xaml
@@ -451,6 +451,11 @@
 							<TextBlock VerticalAlignment="Center" Margin="2">Reassign Case</TextBlock>
 						</StackPanel>
 					</Button>
+                    <Button ToolTip="Set CPT COdes" Click="ButtonSetCPTCodes_Click">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock VerticalAlignment="Center" Margin="2">CPT Codes</TextBlock>
+                        </StackPanel>
+                    </Button>
                 </ToolBar>
 			</ToolBarTray>
 
