--- a/YellowstonePathology/UI/Surgical/SurgicalReview.xaml
+++ b/YellowstonePathology/UI/Surgical/SurgicalReview.xaml
@@ -451,7 +451,7 @@
 							<TextBlock VerticalAlignment="Center" Margin="2">Reassign Case</TextBlock>
 						</StackPanel>
 					</Button>
-                    <Button ToolTip="Set CPT COdes" Click="ButtonSetCPTCodes_Click">
+                    <Button ToolTip="Set CPT Codes" Click="ButtonSetCPTCodes_Click">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock VerticalAlignment="Center" Margin="2">CPT Codes</TextBlock>
                         </StackPanel>
