--- a/YellowstonePathology/UI/Surgical/PeerReviewResultPage.xaml
+++ b/YellowstonePathology/UI/Surgical/PeerReviewResultPage.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Surgical.PeerReviewResultPage"
+﻿<UserControl x:Class="YellowstonePathology.UI.Surgical.ProspectiveReviewResultPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 			 xmlns:local="clr-namespace:YellowstonePathology.UI.Test"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:Test="clr-namespace:YellowstonePathology.UI.Test"
-             x:Name="UserControlPeerReviewPage">
+             x:Name="UserControlProspectiveReviewPage">
     <UserControl.Resources>
-        <DataTemplate x:Key="PeerReviewTemplate">
+        <DataTemplate x:Key="ProspecitveReviewTemplate">
             <Border BorderBrush="LightGray" BorderThickness="1" CornerRadius="2">
                 <Grid Margin="2,2,2,2">
                     <Grid.ColumnDefinitions>
@@ -28,7 +28,7 @@
                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=OrderDate, Converter={StaticResource ShortDateConverter}}"/>                    
                 
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold" Text="Assigned To:" HorizontalAlignment="Right"/>
-                    <ComboBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding ElementName=UserControlPeerReviewPage, Path=DataContext.PathologistUsers}"
+                    <ComboBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding ElementName=UserControlProspecitveReviewPage, Path=DataContext.PathologistUsers}"
 								      SelectedValuePath="UserId"
 								      DisplayMemberPath="DisplayName"
 								      SelectedValue="{Binding Path=AssignedToId}" HorizontalAlignment="Stretch"/>
@@ -149,25 +149,25 @@
                 </Grid.RowDefinitions>
 
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold" Text="Ordered By:" HorizontalAlignment="Right"/>
-                <ComboBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding ElementName=UserControlPeerReviewPage, Path=DataContext.PathologistUsers}"
+                <ComboBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding ElementName=UserControlProspecitveReviewPage, Path=DataContext.PathologistUsers}"
 								      SelectedValuePath="UserId"
 								      DisplayMemberPath="DisplayName"
 								      SelectedValue="{Binding Path=PanelSetOrder.AssignedToId}" HorizontalAlignment="Stretch"/>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Review Type:</TextBlock>
-                <ComboBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding ElementName=UserControlPeerReviewPage, Path=DataContext.PeerReviewTypeCollection}"								      
-								      SelectedValue="{Binding Path=PanelSetOrder.PeerReviewRequestType}" HorizontalAlignment="Stretch"/>
+                <ComboBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding ElementName=UserControlProspectiveReviewPage, Path=DataContext.ProspectiveReviewTypeCollection}"								      
+								      SelectedValue="{Binding Path=PanelSetOrder.ProspectiveReviewRequestType}" HorizontalAlignment="Stretch"/>
 
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Top" HorizontalAlignment="Right">Comment:</TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.PeerReviewRequestComment}" TextWrapping="Wrap" AcceptsReturn="True" Height="60"></TextBox>
+                <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ProspectiveReviewRequestComment}" TextWrapping="Wrap" AcceptsReturn="True" Height="60"></TextBox>
 
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Top" HorizontalAlignment="Right">Hold case for Peer Review:</TextBlock>
-                <CheckBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.HoldForPeerReview}"/>
+                <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Top" HorizontalAlignment="Right">Hold case for Prospective Review:</TextBlock>
+                <CheckBox Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.HoldForProspectiveReview}"/>
                 
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" FontWeight="Bold" VerticalAlignment="Top" HorizontalAlignment="Right">Case Final Date:</TextBlock>
                 <TextBox Grid.Column="1" Grid.Row="4" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.FinalTime}" IsEnabled="False"></TextBox>
 
-                <ListBox Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4" ItemsSource="{Binding Path=PeerReviewTestOrderCollection}" ItemTemplate="{StaticResource PeerReviewTemplate}" Margin="2,2,2,2"
+                <ListBox Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="4" ItemsSource="{Binding Path=ProspectiveReviewTestOrderCollection}" ItemTemplate="{StaticResource ProspectiveReviewTemplate}" Margin="2,2,2,2"
 							ScrollViewer.HorizontalScrollBarVisibility="Disabled" BorderThickness="0">
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="ListBoxItem">
