--- a/YellowstonePathology/UI/Test/RetrospectiveReviewResultPage.xaml
+++ b/YellowstonePathology/UI/Test/RetrospectiveReviewResultPage.xaml
@@ -19,9 +19,10 @@
         </Grid.RowDefinitions>
 
 		<Border Grid.Row="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
-		<TextBlock Grid.Column="0" Grid.Row="0" Margin="20,2,2,2" Text="{Binding Path=PageHeaderText}" VerticalAlignment="Center" Foreground="White" FontSize="16" FontWeight="Bold"></TextBlock>        
-        
+		<TextBlock Grid.Column="0" Grid.Row="0" Margin="20,2,2,2" Text="{Binding Path=PageHeaderText}" VerticalAlignment="Center" Foreground="White" FontSize="16" FontWeight="Bold"></TextBlock>
+
         <Grid Grid.Row="1" Margin="5">
+            
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -42,34 +43,14 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>                    
-				</Grid.RowDefinitions>                
-                
-                <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Results</TextBlock>
+				</Grid.RowDefinitions>
+
+                <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Help</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkSetResults_Click">Set Results</Hyperlink>
+                    <Hyperlink Click="HyperLinkDisagreements_Click">Disagreements</Hyperlink>
                 </TextBlock>
-                
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
-				</TextBlock>
-
-                <TextBlock Name="TextBlockShowDocument" Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
-				</TextBlock>
-                
-				<TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,5">
-					<Hyperlink Click="HyperLinkFinalizeResults_Click">Finalize</Hyperlink>
-				</TextBlock>
-
-				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
-				</TextBlock>
-
-                <TextBlock Name="TextBlockUnfinalResults" Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize Results</Hyperlink>
-				</TextBlock>
-
+                                
 			</Grid>
 
             <ScrollViewer Grid.Column="1" Margin="10">
@@ -87,59 +68,67 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
-                        <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="*"></RowDefinition>
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Result:</TextBlock>
-                    <ComboBox Name="ComboBoxResult" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding Path=ResultCollection}" DisplayMemberPath="ResultDisplayText" 
-							  SelectedValue="{Binding Path=PanelSetOrder.ResultCode}" SelectedValuePath="ResultCode" HorizontalAlignment="Stretch"/>
-                    
-                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Ordered On:</TextBlock>
-                    <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" Text="{Binding Path=OrderedOnDescription}"></TextBlock>                                                            
+                    <ComboBox Name="ComboBoxResult" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2">
+                        <ComboBoxItem Tag="Hide">Agree</ComboBoxItem>
+                        <ComboBoxItem Tag="Show">Disagree</ComboBoxItem>
+                    </ComboBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">Tumor Nuclei Percentage:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.TumorNucleiPercentage}"></TextBox>                                        
+                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Comment:</TextBlock>
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" AcceptsReturn="True" Height="100"></TextBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" FontWeight="Bold">Interpretation:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Interpretation}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+                    <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2">
+                        <Grid.Style>
+                            <Style>
+                                <Setter Property="Grid.Visibility" Value="Collapsed"></Setter>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding ElementName=ComboBoxResult, Path=SelectedItem.Tag}" Value="Show">
+                                        <Setter Property="Grid.Visibility" Value="Visible"></Setter>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Grid.Style>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                        </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" FontWeight="Bold">References Range:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReferenceRange}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+                        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Disagreement Type:</TextBlock>
+                        <ComboBox Grid.Column="1" Grid.Row="0" Margin="2,2,2,2">
+                            <ComboBoxItem>Threshold</ComboBoxItem>
+                            <ComboBoxItem>Process</ComboBoxItem>
+                            <ComboBoxItem>Grade</ComboBoxItem>
+                            <ComboBoxItem>Other</ComboBoxItem>
+                        </ComboBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" FontWeight="Bold">Nuclei Scored:</TextBlock>
-                    <TextBox Grid.Column="1" Grid.Row="7" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.NucleiScored}" HorizontalAlignment="Stretch"></TextBox>
+                        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Disagreement Level:</TextBlock>
+                        <ComboBox Grid.Column="1" Grid.Row="1" Margin="2,2,2,2">
+                            <ComboBoxItem>Major</ComboBoxItem>
+                            <ComboBoxItem>Minor</ComboBoxItem>
+                        </ComboBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="8" Margin="2,2,2,2" FontWeight="Bold">Probe Set Detail:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ProbeSetDetail}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+                        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" FontWeight="Bold">Impact On Patient:</TextBlock>
+                        <ComboBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2">
+                            <ComboBoxItem>Near Miss</ComboBoxItem>
+                            <ComboBoxItem>Precursors Safety Event</ComboBoxItem>
+                            <ComboBoxItem>Serious Safety Event</ComboBoxItem>
+                            <ComboBoxItem>Moderate permanent harm</ComboBoxItem>
+                            <ComboBoxItem>Severe permanent harm</ComboBoxItem>
+                            <ComboBoxItem>Death</ComboBoxItem>
+                        </ComboBox>
 
-                    <TextBlock Grid.Column="0" Grid.Row="10" Margin="2,2,2,2" FontWeight="Bold">References:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="11" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportReferences}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-                    <TextBlock Grid.Column="0" Grid.Row="12" Margin="2,2,2,2" FontWeight="Bold">Method:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="13" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-                    <TextBlock Grid.Column="0" Grid.Row="14" Margin="2,2,2,2" FontWeight="Bold">Report Disclaimer:</TextBlock>
-                    <TextBox Grid.Column="0" Grid.Row="15" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=PanelSetOrder.ReportDisclaimer}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
-
-                    <TextBlock Grid.Column="0" Grid.Row="16" Margin="2,2,2,2" FontWeight="Bold">Distribute:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="16" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.Distribute}"></CheckBox>
-
-					<TextBlock Grid.Column="0" Grid.Row="17" Margin="2,2,2,2" FontWeight="Bold">No Charge:</TextBlock>
-                    <CheckBox Grid.Column="1" Grid.Row="17" Margin="2,2,2,2" IsChecked="{Binding Path=PanelSetOrder.NoCharge}"></CheckBox>
-
-                    <Test:ReferenceLabFinalControl x:Name="ReferenceLabFinalControl" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="18" Margin="2,2,2,2"/>
-
+                    </Grid>
                 </Grid>
             </ScrollViewer>
 
