--- a/YellowstonePathology/UI/Test/TCellNKProfileResultPage.xaml
+++ b/YellowstonePathology/UI/Test/TCellNKProfileResultPage.xaml
@@ -183,7 +183,7 @@
                         <TextBlock Grid.Column="3" Grid.Row="4" Margin="10,2,2,2" Text="{Binding Path=PanelSetOrder.CD16CD56NKCount}" />
 
                         <TextBlock Grid.Column="0" Grid.Row="5" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">CD4/CD8 ratio:</TextBlock>
-                        <TextBlock Grid.Column="1" Grid.Row="5" Margin="10,2,2,2" Text="{Binding Path=PanelSetOrder.CD4CD8Ratio}" />
+                        <TextBox Grid.Column="1" Grid.Row="5" Margin="10,2,2,2" Text="{Binding Path=PanelSetOrder.CD4CD8Ratio}" />
                     </Grid>
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" HorizontalAlignment="Left">Clinical History:</TextBlock>
