--- a/YellowstonePathology/UI/Login/FinalizeAccession/SpecimenMappingPage.xaml
+++ b/YellowstonePathology/UI/Login/FinalizeAccession/SpecimenMappingPage.xaml
@@ -118,6 +118,7 @@
             <Grid.ColumnDefinitions>                
                 <ColumnDefinition Width="Auto"></ColumnDefinition>                
                 <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>		            
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
@@ -131,6 +132,8 @@
 
             <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Client Accessioned:</TextBlock>
             <CheckBox Grid.Column="1" Grid.Row="0" IsChecked="{Binding Path=AccessionOrder.ClientAccessioned}" Margin="2,2,2,2"></CheckBox>
+
+            <Button Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Height="30" Click="ButtonMarkBlocks_Click">Mark All Blocks</Button>
 
             <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold" HorizontalAlignment="Right">Master Accession No:</TextBlock>
             <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" HorizontalAlignment="Stretch" Text="{Binding Path=AccessionOrder.MasterAccessionNo}"></TextBlock>
