--- a/YellowstonePathology/UI/Billing/PanelSetOrderCPTCodeEntryPage.xaml
+++ b/YellowstonePathology/UI/Billing/PanelSetOrderCPTCodeEntryPage.xaml
@@ -57,6 +57,8 @@
 					<ComboBoxItem>52</ComboBoxItem>
                     <ComboBoxItem>59</ComboBoxItem>
 					<ComboBoxItem>1P</ComboBoxItem>
+                    <ComboBoxItem>2659</ComboBoxItem>
+                    <ComboBoxItem>TC59</ComboBoxItem>
 				</ComboBox>
 
 				<TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,2" TextAlignment="Right" FontWeight="Bold" VerticalAlignment="Center" FontSize="14">Type:</TextBlock>
